// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillio",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components Body as Link Snapshot 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Text
    accessibilityRole="link"
    allowFontScaling={true}
    dynamicTypeRamp="body"
    maxFontSizeMultiplier={1.5}
    style={
      [
        {
          "textDecorationLine": "underline",
        },
        {
          "color": "#0B3EE3",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
      ]
    }
  >
    Text
  </Text>
</View>
`;

exports[`Test Typography Components BodyMonospace Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
      },
      {
        "color": "#555C70",
        "fontFamily": "Fira Code",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "500",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 2`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0B3EE3",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 3`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 4`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#D13333",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 5`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components ButtonText Snapshot 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 20,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="largeTitle"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 42,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="largeTitle"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 42,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title1"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 26,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 34,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#D2D6E3",
        "fontFamily": "Titillio",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0B3EE3",
        "fontFamily": "Titillio",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#555C70",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#0B3EE3",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillio",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H6 Snapshot 1`] = `
<Text
  allowFontScaling={true}
  dynamicTypeRamp="headline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillio",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;
